# GuiWorld

./: .gitignore  Makefile  README.md  bobo.md  webgui-experiments.sln
.github/: copilot-instructions.md
archive/serverworld/: Makefile  README.md  pyproject.toml
archive/serverworld/api/: objects.py  realtime.py  scenes.py
archive/serverworld/app/: __init__.py  main.py  models.py
archive/serverworld/static/js/: camera-controls.js  scene-manager.js  webgl-renderer.js  websocket-client.js
archive/serverworld/templates/: base.html  viewer.html
archive/serverworld/templates/demos/: index.html
archive/serverworld/tests/: test_api.py
archive/serverworld/utils/: __init__.py
archive/serverworld3d/: Program.cs  ServerWorld3D.csproj  appsettings.json  dotnet-watch.json
archive/serverworld3d/Components/: _Imports.razor
archive/serverworld3d/Hubs/: ServerHub.cs
archive/serverworld3d/Models/: ServerState.cs
archive/serverworld3d/Properties/: launchSettings.json
archive/serverworld3d/Services/: GrpcServerMonitoringService.cs  ServerMonitoringService.cs
infrastructure/: Makefile  README.md
infrastructure/hub/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/spokes/database-spoke/: main.tf  (+3 more)
serverworld/app/: webgl_generator.py
serverworld/utils/: mesh_generators.py
serverworld3d/: Program.cs  ServerWorld3D.csproj
serverworld3d/Components/: App.razor
serverworld3d/Properties/: launchSettings.json
serverworld3d/Protos/: servermonitoring.proto
serverworld3d/Services/: GrpcServerMonitoringService.cs  ServerMonitoringService.cs
(+33 files in other folders)
